<resources>
    <string name="app_name">MyFlickr</string>
    <string name="toolbar_action_add">add item</string>
    <string name="add_toolbar_title">Add item</string>
    <string name="add_text_hint_input_name">Input name</string>
    <string name="add_text_hint_input_url">Input URL</string>
    <string name="add_hint_date">--/--/----</string>
    <string name="add_button_text_select_date">Select date</string>
    <string name="add_text_date">Date:</string>
    <string name="add_text_url">URL:</string>
    <string name="add_text_name">Name:</string>
    <string name="add_text_url_default">http:/http.cat/418</string>
    <string name="main_primary_image_view_description">There should be your picture</string>
    <string name="content_description_for_picture">there should be your picture</string>
    <string name="new_line">\n</string>
    <string name="info_name">Name:</string>
    <string name="info_tags">Tags:</string>
    <string name="info_date">Date:</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_info_data">Dane:</string>
    <string name="date_format">dd/MM/yyyy</string>
</resources>
