<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/default_toolbar_height"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolbarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/add_toolbar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:titleTextColor="@color/colorAccent"
            app:popupTheme="@style/ToolbarTheme" app:title="@string/add_toolbar_title"/>

    <TextView
            android:text="@string/add_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_text_name" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_toolbar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side" android:textSize="@dimen/default_text_size" android:fontFamily="@font/istok_web"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/add_text_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_text_url" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_text_name" android:layout_marginTop="@dimen/default_top_margin"
            android:textSize="@dimen/default_text_size" android:fontFamily="@font/istok_web" android:textStyle="bold"/>
    <TextView
            android:text="@string/add_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_text_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_text_url" android:textSize="@dimen/default_text_size"
            android:fontFamily="@font/istok_web" android:textStyle="bold"/>
    <EditText
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/add_edit_text_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_text_name" android:layout_marginEnd="@dimen/default_margin_side"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/add_text_hint_input_name" android:inputType="text"
            android:fontFamily="@font/istok_web" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri|textShortMessage|textPersonName"
            android:ems="10"
            android:id="@+id/add_edit_text_url" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_text_url"
            android:layout_marginStart="@dimen/default_margin_side"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/add_text_hint_input_url"
            android:layout_marginEnd="@dimen/default_margin_side"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/istok_web"
            tools:text="@string/add_text_url_default" tools:ignore="Autofill"
            android:text="@string/add_text_url_default"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_text_date_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/default_margin_side" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_text_date" android:text="@string/add_hint_date" android:textSize="@dimen/add_date_hint_text_size"
            android:fontFamily="@font/istok_web"/>
    <Button
            android:text="@string/add_button_text_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button_select_date" android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_text_date_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin_side" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/default_margin_side"
            android:fontFamily="@font/istok_web" android:layout_marginBottom="@dimen/default_bottom_margin"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.13"/>
</androidx.constraintlayout.widget.ConstraintLayout>